--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
